--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,39 @@
 # Logs
 logs
 *.log
-npm-debug.log*
 
 # Dependency directory
 node_modules
+
+# JWT_SECRET
+.env
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
-.DS_Store
+
 .idea
 .vscode
 
-.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+.pnp
+.pnp.js
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
