--- a/package.json
+++ b/package.json
@@ -4,30 +4,36 @@
   "description": "Здесь хранится бэкенд часть приложения.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "lint": "npx eslint .",
     "dev": "nodemon app.js",
-    "lint": "npx eslint ."
+    "start": "node app.js",
+    "depcheck": "depcheck"
   },
-  "devDependencies": {
-    "eslint": "^8.45.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "nodemon": "^3.0.1"
-  },
+  "keywords": [
+    "Express.js",
+    "MongoDB",
+    "REST API",
+    "бэкенд"
+  ],
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "eslint": "^8.45.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.8.1",
+    "express-rate-limit": "^6.7.0",
     "express-winston": "^4.2.0",
-    "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.4",
-    "validator": "^13.9.0",
-    "winston": "^3.10.0"
+    "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0",
+    "validator": "^13.11.0",
+    "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "depcheck": "^1.4.3",
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^2.0.22"
   },
   "author": "Victoriia Nosareva",
   "license": "ISC"
